--- a/index.html
+++ b/index.html
@@ -52,13 +52,7 @@
     <!-- 地圖區 -->
     <section class="map">
       <h2>🗺️ 地圖</h2>
-      <div id="map-placeholder">
-        <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="none" stroke="currentColor" stroke-width="2">
-          <circle cx="32" cy="32" r="30"/>
-          <path d="M32 12v20l10 10"/>
-        </svg>
-        <p>地圖顯示區（預留，可串接 Google Maps）</p>
-      </div>
+	  <iframe class="map-iframe" id="mapFrame" loading="lazy"></iframe>
     </section>
   </main>
 
