--- a/tt.html
+++ b/tt.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>五天出國景點行程（含分類）</title>
+<title>五天出國行程規劃（含分類與地圖）</title>
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap');
 
@@ -12,19 +12,18 @@
     background: linear-gradient(135deg, #f0f4ff, #d9e6ff);
     max-width: 720px;
     margin: 30px auto;
-    padding: 20px 15px 40px;
+    padding: 20px 15px 50px;
     color: #2c3e50;
   }
 
   h1 {
     text-align: center;
     font-weight: 700;
-    font-size: 2.6rem;
+    font-size: 2.5rem;
     color: #34495e;
     margin-bottom: 35px;
   }
 
-  /* Day Selector */
   .day-selector {
     display: flex;
     justify-content: center;
@@ -52,17 +51,9 @@
     cursor: pointer;
     padding: 12px 16px;
     border-radius: 10px;
-    transition: color 0.3s ease;
   }
-  .day-button:hover {
-    color: #2980b9;
-  }
-  .day-button.active {
-    color: #2980b9;
-    font-weight: 900;
-  }
+  .day-button.active { color: #2980b9; }
 
-  /* Spot Selector */
   .spot-selector {
     display: flex;
     gap: 12px;
@@ -79,55 +70,25 @@
     border-radius: 25px;
     padding: 8px 18px;
     font-weight: 600;
-    font-size: 1rem;
-    cursor: pointer;
     display: flex;
     align-items: center;
     gap: 6px;
-    white-space: nowrap;
+    cursor: pointer;
     transition: background 0.3s ease;
   }
-  .spot-button.active {
-    color: #fff;
-  }
-  .spot-button .tag {
-    font-size: 0.85rem;
-    font-weight: 700;
-    padding: 3px 8px;
-    border-radius: 12px;
-  }
+  .spot-button.active { color: #fff; background: #2980b9; }
 
-  /* 分類顏色 */
-  .tag-food {
-    background: #e67e22;
-    color: #fff;
-  }
-  .tag-spot {
-    background: #2980b9;
-    color: #fff;
-  }
-  .tag-shop {
-    background: #27ae60;
-    color: #fff;
-  }
+  .tag-food { background: #e67e22; color: #fff; padding: 3px 8px; border-radius: 12px; font-size: 0.8rem; }
+  .tag-spot { background: #2980b9; color: #fff; padding: 3px 8px; border-radius: 12px; font-size: 0.8rem; }
+  .tag-shop { background: #27ae60; color: #fff; padding: 3px 8px; border-radius: 12px; font-size: 0.8rem; }
 
-  /* Info container */
   .info-container {
     background: white;
-    padding: 30px 25px 35px;
+    padding: 25px;
     border-radius: 15px;
     box-shadow: 0 12px 25px rgba(0, 0, 0, 0.08);
     position: relative;
-    overflow: hidden;
-    margin-bottom: 40px;
-  }
-  .info-container svg.bg-decor {
-    position: absolute;
-    top: -40px;
-    right: -40px;
-    width: 140px;
-    height: 140px;
-    opacity: 0.1;
+    margin-bottom: 30px;
   }
   .info-title {
     font-size: 2rem;
@@ -137,45 +98,15 @@
     align-items: center;
     gap: 8px;
   }
-  .info-tag {
-    font-size: 0.85rem;
-    padding: 5px 10px;
-    border-radius: 12px;
-    font-weight: 700;
-  }
-  .info-desc {
-    font-size: 1.15rem;
-    line-height: 1.6;
-    color: #4a5a6a;
-    margin-bottom: 15px;
-  }
-  .info-address {
-    font-style: italic;
-    font-size: 1rem;
-    color: #7f8c8d;
-    border-left: 4px solid #2980b9;
-    padding-left: 12px;
-  }
+  .info-tag { padding: 5px 10px; border-radius: 12px; font-weight: 700; font-size: 0.9rem; }
+  .info-desc { font-size: 1.15rem; line-height: 1.6; margin-bottom: 15px; color: #4a5a6a; }
+  .info-address { font-style: italic; color: #7f8c8d; padding-left: 12px; border-left: 4px solid #2980b9; }
 
-  /* Image carousel */
-  .image-carousel {
-    position: relative;
-    margin-top: 20px;
-    border-radius: 12px;
-    overflow: hidden;
-    box-shadow: 0 8px 20px rgba(41, 128, 185, 0.15);
-  }
-  .image-carousel img {
-    width: 100%;
-    height: 300px;
-    object-fit: cover;
-  }
+  .image-carousel { position: relative; margin-top: 20px; border-radius: 12px; overflow: hidden; }
+  .image-carousel img { width: 100%; height: 300px; object-fit: cover; }
   .carousel-controls {
-    position: absolute;
-    top: 50%;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
+    position: absolute; top: 50%; width: 100%;
+    display: flex; justify-content: space-between;
     transform: translateY(-50%);
   }
   .carousel-btn {
@@ -189,50 +120,32 @@
     cursor: pointer;
   }
   .carousel-index {
-    position: absolute;
-    bottom: 12px;
-    right: 20px;
-    background: rgba(41, 128, 185, 0.75);
-    color: white;
-    padding: 5px 14px;
-    border-radius: 14px;
+    position: absolute; bottom: 12px; right: 20px;
+    background: rgba(41, 128, 185, 0.75); color: white;
+    padding: 5px 14px; border-radius: 14px;
   }
 
-  /* Review */
   .review-section {
     background: white;
     border-radius: 15px;
     box-shadow: 0 10px 25px rgba(0,0,0,0.07);
     padding: 25px;
+    margin-bottom: 30px;
   }
-  .review-title {
-    font-size: 1.8rem;
-    margin-bottom: 15px;
-  }
-  .review-content {
-    font-size: 1.15rem;
-    line-height: 1.6;
-    min-height: 80px;
-    margin-bottom: 10px;
-  }
-  .review-author {
-    font-weight: 700;
-    color: #2980b9;
-  }
-  .review-controls {
-    display: flex;
-    gap: 10px;
-  }
-  .review-btn {
-    background: #2980b9;
-    color: #fff;
-    border: none;
-    width: 38px;
-    height: 38px;
-    border-radius: 50%;
-    cursor: pointer;
-  }
+  .review-title { font-size: 1.8rem; margin-bottom: 15px; }
+  .review-content { font-size: 1.15rem; line-height: 1.6; min-height: 80px; margin-bottom: 10px; }
+  .review-author { font-weight: 700; color: #2980b9; }
+  .review-btn { background: #2980b9; color: #fff; border: none; width: 38px; height: 38px; border-radius: 50%; cursor: pointer; }
 
+  /* 地圖區 */
+  .map-section {
+    background: white;
+    border-radius: 15px;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.07);
+    padding: 20px;
+  }
+  .map-title { font-size: 1.6rem; font-weight: 700; margin-bottom: 10px; }
+  .map-iframe { width: 100%; height: 300px; border: none; border-radius: 10px; }
 </style>
 </head>
 <body>
@@ -255,8 +168,12 @@
   </div>
 </section>
 
+<section class="map-section">
+  <h3 class="map-title">📍 地圖資訊</h3>
+  <iframe class="map-iframe" id="mapFrame" loading="lazy"></iframe>
+</section>
+
 <script>
-  // 分類對應顏色 & 圖示
   const categoryConfig = {
     '美食': { class: 'tag-food', icon: '🍽️' },
     '景點': { class: 'tag-spot', icon: '🏞️' },
@@ -272,6 +189,8 @@
           category: "景點",
           description: "台北101是台灣著名地標，高樓觀景台能俯瞰整個台北市。",
           address: "台北市信義區市府路45號",
+          latitude: 25.033968,
+          longitude: 121.564468,
           images: [
             "https://upload.wikimedia.org/wikipedia/commons/f/fd/Taipei_101_2016.jpg",
             "https://upload.wikimedia.org/wikipedia/commons/9/95/Taipei_101_at_night.jpg"
@@ -286,40 +205,13 @@
           category: "美食",
           description: "台灣經典小籠包餐廳，以精緻手工著稱。",
           address: "台北市信義區信義路五段",
+          latitude: 25.033045,
+          longitude: 121.562495,
           images: [
             "https://upload.wikimedia.org/wikipedia/commons/f/f0/Din_Tai_Fung_Xiaolongbao.jpg"
           ],
           reviews: [
             { author: "阿芳", content: "超好吃！服務也很棒。" }
-          ]
-        }
-      ]
-    },
-    {
-      day: 2,
-      spots: [
-        {
-          title: "九份老街",
-          category: "景點",
-          description: "九份以山城老街與美麗山景著稱，是台灣經典景點。",
-          address: "新北市瑞芳區九份",
-          images: [
-            "https://upload.wikimedia.org/wikipedia/commons/3/3a/Jiufen_old_street_%282%29.jpg"
-          ],
-          reviews: [
-            { author: "阿珍", content: "夜景絕美，食物好吃又多樣。" }
-          ]
-        },
-        {
-          title: "手信坊",
-          category: "購物",
-          description: "知名伴手禮商店，販售鳳梨酥與糕點。",
-          address: "新北市中和區景安路",
-          images: [
-            "https://upload.wikimedia.org/wikipedia/commons/3/36/Pineapple_cake_Taiwan.jpg"
-          ],
-          reviews: [
-            { author: "小強", content: "買了一堆送朋友，超方便！" }
           ]
         }
       ]
@@ -335,6 +227,7 @@
   const reviewAuthor = document.getElementById('reviewAuthor');
   const reviewPrev = document.getElementById('reviewPrev');
   const reviewNext = document.getElementById('reviewNext');
+  const mapFrame = document.getElementById('mapFrame');
 
   let currentDayIndex = 0;
   let currentSpotIndex = 0;
@@ -360,7 +253,7 @@
       const btn = document.createElement('button');
       btn.className = `spot-button ${i === 0 ? 'active' : ''}`;
       const cfg = categoryConfig[spot.category];
-      btn.innerHTML = `<span>${spot.title}</span><span class="tag ${cfg.class}">${cfg.icon} ${spot.category}</span>`;
+      btn.innerHTML = `<span>${spot.title}</span><span class="${cfg.class}">${cfg.icon} ${spot.category}</span>`;
       btn.onclick = () => switchSpot(i);
       spotSelector.appendChild(btn);
     });
@@ -384,6 +277,7 @@
     createSpotButtons(index);
     updateInfo();
     updateReview();
+    updateMap();
   }
 
   function switchSpot(index) {
@@ -394,6 +288,7 @@
     currentReviewIndex = 0;
     updateInfo();
     updateReview();
+    updateMap();
   }
 
   function updateInfo() {
@@ -401,7 +296,6 @@
     const cfg = categoryConfig[spot.category];
 
     infoContainer.innerHTML = `
-      <svg class="bg-decor" viewBox="0 0 100 100" fill="#2980b9"><circle cx="50" cy="50" r="50"/></svg>
       <h2 class="info-title">${spot.title} 
         <span class="info-tag ${cfg.class}">${cfg.icon} ${spot.category}</span>
       </h2>
@@ -448,10 +342,23 @@
     };
   }
 
+  function updateMap() {
+    const spot = itinerary[currentDayIndex].spots[currentSpotIndex];
+    const lat = spot.latitude;
+    const lng = spot.longitude;
+    // Google 地圖嵌入 + 附近停車場
+    const mapUrl = `https://www.google.com/maps/embed/v1/search?key=YOUR_API_KEY&q=停車場+near+${lat},${lng}&center=${lat},${lng}&zoom=15`;
+    // ⚠️ 如果不想用 API Key，也可用以下 URL：
+    const altUrl = `https://www.google.com/maps?q=${lat},${lng}&z=16&output=embed`;
+    mapFrame.src = altUrl;
+  }
+
   createDayButtons();
   createSpotButtons(0);
   updateInfo();
   updateReview();
+  updateMap();
+
   window.addEventListener('resize', () => setUnderlinePosition(currentDayIndex));
 </script>
 </body>
