--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
   <footer>
     <p>© 2025 旅遊規劃網站 Demo</p>
   </footer>
-
+	<div id="image-modal" class="image-modal">
+	  <span class="close-btn">&times;</span>
+	  <img class="modal-content" id="modal-img">
+	</div>
   <script src="script.js"></script>
 </body>
 </html>
