--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 	  <span class="close-btn">&times;</span>
 	  <img class="modal-content" id="modal-img">
 	</div>
-  <script src="script.js"></script>
+  <script src="script.js?v=1"></script>
 </body>
+
 </html>
